...
	//var to disable the game type & player type radio buttons so you can't change game type in the middle of playing
	@State var gamePlayerTypeDisabled: Bool = false
	//initial player types, always human on launch, 1 == human, 2 == computer
	@State var bluePlayerType: Int = 1
	@State var redPlayerType: Int = 1
	//initial scores, always 0 on launch
	@State var bluePlayerScore: Int = 0
	@State var redPlayerScore: Int = 0
	//initial player, always Blue on launch
	@State var currentPlayer: String = "Blue"
	//index of last button clicked
	@State var lastButtonClickedIndex: Int = 0
	//color of text in the buttons
	@State var buttonTextColor: Color = .white
...
			//each "column" in the upper band is a separate vstack
			//this is just how swiftui does things
			VStack(alignment: .leading) {
			    Text("Game Type:")
					.modifier(basicTextModifier())
					.accessibilityLabel("Game Type label")
					.accessibilityIdentifier("gameTypeLabel")
				    //this actually draws the buttons, simple = 1, general = 2
				gameTypeRadioButtonView(index: 1, selectedIndex: $gameType)
					.accessibilityLabel("gameTypeSimple")
				gameTypeRadioButtonView(index: 2, selectedIndex: $gameType)
					.accessibilityLabel("gameTypeGeneral")
					//
			}
			.padding(.leading, 20.0)
			//so what we're doing is technically disabling the Vstack the radio buttons are contained in
			//but that has the desired effect and we don't have to have one .disabled() method per radio button this way.
			.disabled(gamePlayerTypeDisabled)
...
				    Text("4").tag(4)
				    Text("5").tag(5)
				    Text("6").tag(6)
				    Text("7").tag(7)
				    Text("8").tag(8)
				    Text("9").tag(9)
				    Text("10").tag(10)
				}
				//picker properties
				//padding has to be separate for each dimensions
					.modifier(basicTextModifierNoFrame())
					.frame(width: 140.0,alignment: .center)
					.padding(.top,2)
					.accessibilityLabel("Board Size Dropdown")
					.accessibilityIdentifier("boardSizeDropdown")
				    //makes it look like a dropdown list
					.pickerStyle(MenuPickerStyle())
					//this is how you initiate actions based on a change event
					//test func to show size of board based on selection
					.onChange(of: theGame.gridSize) {
						//boardSizeSelect(theSelection: theGame.gridSize)
...
				Text("Blue Player:")
					.modifier(basicTextModifier())
					.accessibilityLabel("Blue Player Label")
					.accessibilityIdentifier("bluePlayerLabel")
				//radio buttons to chose between human and computer
				bluePlayerTypeRadioButton(index: 1, selectedIndex: $bluePlayerType)
					.accessibilityLabel("Blue Player Human")
				bluePlayerTypeRadioButton(index: 2, selectedIndex: $bluePlayerType)
					.accessibilityLabel("Blue Player Computer")
					.onChange(of: bluePlayerType) {
						//we hide whenever blue player is human
						if (bluePlayerType == 1) {
							//old if condition:(bluePlayerType == 1) && (redPlayerType == 1)
							showStartGameButton = false
							//if they change blue back to human, re-enable all the buttons
...
				HStack(alignment: .center) {
					//in an if statement, we don't use the $varname, just the varname
					//if the game is simple, (1) then don't show the score
					if gameType != 1 {
						Text("Blue Score")
							//used for unit tests
							.accessibilityLabel("bluePlayerScoreLabel")
						//since score is an int, we coerce it to a string to display it
						Text(String(bluePlayerScore))
							.accessibilityLabel("bluePlayerScore")
						/*TextField(text: $bluePlayerScore) {
							Text("")
						}*/
...
				Text("Red Player:")
					.modifier(basicTextModifier())
					.accessibilityLabel("Red Player Label")
					.accessibilityIdentifier("redPlayerLabel")
				//radio buttons to chose between human and computer
				redPlayerTypeRadioButton(index: 1, selectedIndex: $redPlayerType)
					.accessibilityLabel("Red Player Human")
				redPlayerTypeRadioButton(index: 2, selectedIndex: $redPlayerType)
					.accessibilityLabel("Red Player Computer")
					.onChange(of: redPlayerType) {
						//we only show when blue player is computer
						//this is more of a doublecheck
						if (bluePlayerType == 1) {
							//slightly redundant but not overly so
							showStartGameButton = false
...
						}
					}
				HStack(alignment: .center) {
					//in an if statement, we don't use the $varname, just the varname
					if gameType != 1 {
						Text("Red Score")
							.accessibilityLabel("redPlayerScoreLabel")
						Text(String(redPlayerScore))
							.accessibilityLabel("redPlayerScore")
						.frame(width: 25, height: 22, alignment: .center)
					}
				}
				.frame(width: 105, height: 22, alignment: .leading)
...
					self.recordGame = false
					//disable the playback button
					self.playbackDisabled = true
					//enable the record game toggle
					self.recordToggleDisabled = false
				} label: {
					Text("New Game")
				}
				.padding(.top,5.0)


				//Commit Move button used to save the move just made, and set that button to disabled.
				//also changes color of the button to reflect the player who made the move
...
					}

				} label: {
					Text("Commit Move")					
				}
				.disabled(buttonBlank)
				.accessibilityLabel("commitButton")
				.alert(isPresented: $playerWon, content: { gameOverAlert(myPlayerColor: currentPlayer, myGameIsDraw: gameWasDraw, myGeneralGameWinner: generalGameWinner, myGameType: gameType) })
				
				//Start Game button for blue player as computer
				//only show button if true
				if showStartGameButton {
					Button {
...
					}
					.onAppear(perform: {
						//enable the start game button if it is visible
						disableStartGameButton = false
					})
					.disabled(disableStartGameButton)
					.accessibilityLabel("startButton")
					//since the only condition the start button is used is as a first move in a game, we don't need the
					//game won alert
				}
			}
			.padding(.leading, 10.0)
		}
...
			//record game button
			Toggle("Record Game:", isOn: $recordGame)
				.toggleStyle(.switch)
				.modifier(basicTextModifierNoFrame())
				.padding(.trailing, 10.0)
				.disabled(recordToggleDisabled)
				.accessibilityLabel("recordGameToggle")
				/*.onChange(of: recordGame) {
					print("Toggle State is: \(recordGame)")
				}*/
			//playback button
			Button {
				//call newGame() to clear all the buttons
...
					thePlayBackCounter += 1
				}
			} label: {
				Text("Playback")
			}
			.disabled(playbackDisabled)
			.accessibilityLabel("playBackRecordedGame")

		}
		Spacer()
		//Hstack for the grid
		//once nice thing about the CSS-like behavior of SwiftUI, it makes a lot of things
		//easier, like the autoresizing of the grid and because the controls Hstack
...
